fix scrollbars and back button

--- a/src/app/container-card-page/container-card-page.component.css
+++ b/src/app/container-card-page/container-card-page.component.css
@@ -18,6 +18,14 @@
   cursor: pointer;
 }
 
+body, html {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: var(--background-color);
+
+}
+
 mat-sidenav {
   padding-right: 5%;
   background-color: var(--background-color);
@@ -25,6 +33,8 @@ mat-sidenav {
 
 mat-sidenav-content {
   height: 100vh;
+  overflow-y: auto;
+  overscroll-behavior: contain;
   background-color: var(--background-color);
 }
 
@@ -33,10 +43,17 @@ mat-sidenav-content {
   background-color: var(--background-color);
   padding-top: 5%;
 }
-
+/* 
 .backNav {
   width: 80%;
   margin: 0 auto;
+  background-color: var(--background-color);
+} */
+
+.sidenav-controls {
+  display: flex;
+  align-items: center;
+  padding: 10px;
   background-color: var(--background-color);
 }
 
